# indexify-cli

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
derive/: Cargo.toml
derive/src/: container.rs  info.rs  lib.rs  parent.rs
src/: api.rs  cli.rs  client.rs  command.rs  derive.rs  file.rs  main.rs  output.rs  telemetry.rs
src/api/: utils.rs
src/cli/: content.rs  extractor.rs  graph.rs  index.rs  namespace.rs  root.rs
src/client/: prelude.rs  traits.rs  types.rs
src/output/: tabled.rs
src/telemetry/: posthog.rs
