[package]
name = "indexify-cli"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.80"
clap = { version = "4.5.7", features = ["derive", "env"] }
eyre = "0.6.12"

[build-dependencies]
eyre.workspace = true

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = "2.2.0"
cli-derive = { path = "derive" }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
color-eyre = "0.6.3"
eyre = { workspace = true }
futures = "0.3.30"
indicatif = { version = "0.17.8", features = ["tokio", "futures"] }
machine-uid = "0.5.2"
mime_guess = "2.0.4"
posthog-rs = "0.2.2"
reqwest = { version = "0.12.5", features = ["json", "stream", "multipart"] }
ring = { version = "0.17.8", features = ["std"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_path_to_error = "0.1.16"
serde_yaml = "0.9.34"
strum = { version = "0.26.3", features = ["derive"] }
tabled = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat", "codec"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
utoipa = "4.2.3"
uuid = "1.9.1"

[workspace]
members = ["derive"]
